--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch server.js",
+    "seed": "node seedData.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
